<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_control_base</name>
  <version>0.0.1</version>
  <description>The Omnidirectional Control package for deployment on the Jetson Nano.</description>
  <maintainer email="gabearod2@gmail.com">gabriel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ament_python</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>jetson-inference</exec_depend>
  <exec_depend>jetson-utils</exec_depend>
  <exec_depend>adafruit-circuitpython-motorkit</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
